@@ -20,9 +20,11 @@
 // NOTE: The F_CPU (CPU frequency) should not be defined in the source code.
 //       It should be defined in either (1) Makefile; or (2) in the IDE. 
 
-#include <stdlib.h>
+#include <stdint.h>
 #include <avr/io.h>
 #include <util/delay.h>
+
+#include "tinyavrlib/scheduler.h"
 
 // Change the ports, if necessary.
 // #define MAX7219_DIN		PB0	// DI,	Pin 3 on LED8x8 Board
@@ -30,8 +32,6 @@
 // #define MAX7219_CLK		PB2	// CLK,	Pin 5 on LED8x8 Board
 
 #include "max7219led8x8/max7219led8x8.h"
-#include "max7219led8x8/max7219led8x8s.h"
-#include "max7219led8x8/scheduler.h"
 
 //
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -49,11 +49,8 @@
 
 // ----------------------------------------------------------------------------
 
-#define LED1_PORT PB4
-
-void scheduler_userfunc(void) {
-	PORTB ^= (1 << LED1_PORT);
-	max7219s_buffer_out();	// Output the buffer
+void scheduler_userfunc(uint32_t scheduler_tick) {
+	max7219b_out();
 }
 
 // ----------------------------------------------------------------------------
@@ -61,20 +58,20 @@ void scheduler_userfunc(void) {
 int main(void) {
 
 	// ---- Initialization ----
-	max7219s_init();
-	// Setup LED, DDRB - Data Direction Register, Port B
-	DDRB |= (1 << LED1_PORT); // Set port as LED output
+	max7219_init();
+	scheduler_init(scheduler_userfunc);
+	// scheduler_reinit(SCHEDULER_TCCR0B_1024, SCHEDULER_OCR0A_DEFAULT);	// Adjust, if necessary
+	scheduler_start();
 
 	// ---- Main Loop ----
-	max7219s_start();
 	for (;;) {
 		uint8_t xp = 0, yp = 0;
 		for (uint8_t y = 0; y <= 7; y++) {
 			for (uint8_t x = 0; x <= 7; x++) {
 				if (x == 0 && y == 0) xp = yp = 7;
-				max7219_buffer_set(x, y);	// Set pixel
-				_delay_ms(50);
-				max7219_buffer_clr(x, y);	// Clear pixel
+				max7219b_set(x, y);	// Set pixel
+				_delay_ms(100);
+				max7219b_clr(x, y);	// Clear pixel
 			}
 		}
 	}
